# cds

./: main.py  pyproject.toml
data/: __init__.py  cds_data.json
utils/: qn_builder.py
