[tool.poetry]
name = "cds"
version = "0.1.0"
description = ""
authors = ["asaphho"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
